# openjournal

./: .gitignore  LICENSE  README.md  deploy.py  pyproject.toml
journal/: .env  compose.yml
journal/volumes/config/: config.inc.php  force-ssl.ini  force-ssl.php  php.ini
scripts/: cleanup.py
src/: __init__.py  constants.py  exceptions.py
src/config/: models.py  validators.py
src/core/: __init__.py  deployer.py
src/services/: __init__.py  compose.py  environment.py  ojs.py  permissions.py
src/templates/: __init__.py
src/utils/: crypto.py  filesystem.py
tests/: conftest.py  test_crypto.py  test_deployer.py  test_filesystem.py  test_models.py  test_validators.py
tools/: cleanup.py
traefik/: .env  compose.yml
